<resources>
    <string name="app_name">House Loan Calculation</string>
    <string name="calculate">Calculate</string>
    <string name="total_price_labal">Total Price(K SGD)</string>
    <string name="total_price">0</string>
    <string name="otp">OTP(5%):</string>
    <string name="otp_after_8_weeks">8 Weeks after OTP:</string>
    <string name="stamp_duty">Stamp Duty:</string>
    <string name="extra_stamp">Extra Stamp Duty:</string>
    <string name="lawyer_fee">Lawyer Fee</string>
    <string name="foundation_completion">Foundation Completed</string>
    <string name="cash_cpf">Cash and CPF(28%):</string>
    <string name="all">"All:"</string>
</resources>
